--- a/html/mayorista.html
+++ b/html/mayorista.html
@@ -14,7 +14,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    
+
+    <!-- METAS -->
+    <meta name="description" content="Tienda de lenceria online, con ropa importada y fabricación propia. Venta minorista y mayorista">
+    <meta name="keywords" content="lenceria, mayorista, bombacha, tanga, colaless, corpiño, conjunto, top, bralette, deportivo, tienda, ropa femenina">
+    <meta name="telephone" content="+549225560-1349">
+    <meta name="whatsapp" content="+549225560-1349">
+    <meta name="author" content="Ivan David Echevarria">
+    <meta name="geo.placename" content="Buenos Aires">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/Logo.jpg" type="image/x-icon">
+   
 </head>
 <body>
 
@@ -75,6 +86,7 @@
         </a>
     </div>
 
+    <main>
     <section id="productos-container">
         <h2>INFORMACION IMPORTANTE</h2>
 
@@ -99,6 +111,7 @@
             
         </div>
     </section>
+    </main>
 
     <footer id="footer-container">
         <div class="formas-de-pago">
